--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.5",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
