--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "firebase": "^8.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
