--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^5.2.3",
+    "file-saver": "^2.0.5",
+    "firebase": "^8.6.1",
     "graphql": "^15.4.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,8 +20,7 @@
     "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "firebase": "^8.6.1"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
