added github icons with links in footer

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.0.1"
   }
 }
