--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server/server.js",
   "engines": {
-    "node": ">=16 <17"
-  },
+    "node": "20.x"
+  }
+  ,
   "scripts": {
     "start": "node server --ignore client",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
