updated build script

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "server/server.js",
   "engines": {
     "node": "20.x"
-  }
-  ,
+  },
   "scripts": {
     "start": "node server --ignore client",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && react-scripts build"
   },
   "keywords": [],
   "author": "",
